--- a/_sass/0-settings/_color-scheme.scss
+++ b/_sass/0-settings/_color-scheme.scss
@@ -1,7 +1,7 @@
 /* Color Scheme */
 
 :root {
-  --brand-color: #5e3aee;
+  --brand-color: #e5bb77;
   --white: #fff;
   --light-gray: #f0f0f0;
   --light-blue: #f8f6fb;
