--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -19,7 +19,7 @@ $base-font-size: 20px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'Josephin Sans', Helvetica Neue, Helvetica, Arial, sans-serif;
+$base-font-family: 'STIX Two Text Regular', Helvetica Neue, Helvetica, Arial, sans-serif;
 $base-line-height: 1.5;
 
 // Headings
