--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -19,12 +19,12 @@ $base-font-size: 20px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'STIX Two Text Regular', Helvetica Neue, Helvetica, Arial, sans-serif;
+$base-font-family: 'Times New Roman', Helvetica Neue, Helvetica, Arial, sans-serif;
 $base-line-height: 1.5;
 
 // Headings
 $heading-font-weight: 700;
-$heading-font-family: 'STIX Two Text Regular', Helvetica Neue, Helvetica, Arial, sans-serif;
+$heading-font-family: 'Times New Roman', Helvetica Neue, Helvetica, Arial, sans-serif;
 
 $font-size-h1:  36px;
 $font-size-h2:  28px;
