--- a/_sass/0-settings/_color-scheme.scss
+++ b/_sass/0-settings/_color-scheme.scss
@@ -35,7 +35,7 @@
 }
 
 :root[dark] {
-  --brand-color: #5e3aee;
+  --brand-color: #efe060;
   --white: #fff;
   --light-gray: #f0f0f0;
   --gray: #9e9e9e;
