--- a/_sass/0-settings/_color-scheme.scss
+++ b/_sass/0-settings/_color-scheme.scss
@@ -1,7 +1,7 @@
 /* Color Scheme */
 
 :root {
-  --brand-color: #efe060;
+  --brand-color: #00a000;
   --white: #fff;
   --light-gray: #f0f0f0;
   --light-blue: #f8f6fb;
@@ -35,7 +35,7 @@
 }
 
 :root[dark] {
-  --brand-color: #efe060;
+  --brand-color: #00a000;
   --white: #fff;
   --light-gray: #f0f0f0;
   --gray: #9e9e9e;
